Make sure the avatars and overflow indicator have consistent spacing
based on the has-overflow class name

--- a/src/components/avatar/theme.css
+++ b/src/components/avatar/theme.css
@@ -303,6 +303,18 @@
   }
 }
 
+.has-overflow {
+  .is-selectable,
+  .is-selected {
+    &:not(.is-hero) + .overflow {
+      margin: 3px;
+    }
+    &.is-hero + .overflow {
+      margin: 6px;
+    }
+  }
+}
+
 /*AvatarInitials*/
 .avatar-initials {
   display: flex;
